--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,10 @@ test = [
   "pytest>=6.1.2",
 ]
 
+[project.scripts]
+extract_features = "vir_md_analysis.main:app"
+
+
 [tool.setuptools]
 # This subkey is a beta stage development and keys may change in the future, see https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html for more details
 #
@@ -82,3 +86,5 @@ default-tag = "1.0.0"
 
 [tool.versioningit.write]
 file = "vir_md_analysis/_version.py"
+
+
