--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,16 @@ classifiers = [
 ]
 requires-python = ">=3.8"
 # Declare any run-time dependencies that should be installed with the package.
-#dependencies = [
-#    "importlib-resources;python_version<'3.10'",
-#]
+dependencies = [
+    "mdtraj",
+    "ambertools", 
+    "pandas",
+    "numpy",
+    "scipy",
+    "biopython",
+    "abnumber",
+    "typer",
+]
 
 # Update the urls once the hosting is set up.
 #[project.urls]
@@ -32,6 +39,26 @@ requires-python = ">=3.8"
 [project.optional-dependencies]
 test = [
   "pytest>=6.1.2",
+]
+notebooks = [
+  "jupyter",
+  "nglview",
+  "matplotlib",
+  "seaborn",
+  "MDAnalysis",
+  "mdakit_sasa",
+  "itables",
+  "ipywidgets",
+]
+dev = [
+  "pytest>=6.1.2",
+  "pytest-cov",
+  "codecov",
+]
+docs = [
+  "pydata-sphinx-theme",
+  "sphinx-design", 
+  "sphinx-copybutton",
 ]
 
 [project.scripts]
